@@ -203,9 +203,11 @@ fprint_target_auxv (struct ui_file *file, struct target_ops *ops)
 	  TAG (AT_ICACHEBSIZE, _("Instruction cache block size"), dec);
 	  TAG (AT_UCACHEBSIZE, _("Unified cache block size"), dec);
 	  TAG (AT_IGNOREPPC, _("Entry should be ignored"), dec);
+	  TAG (AT_BASE_PLATFORM, _("String identifying base platform"), str);
+	  TAG (AT_EXECFN, _("File name of executable"), str);
+	  TAG (AT_SECURE, _("Boolean, was exec setuid-like?"), dec);
 	  TAG (AT_SYSINFO, _("Special system info/entry points"), hex);
 	  TAG (AT_SYSINFO_EHDR, _("System-supplied DSO's ELF header"), hex);
-	  TAG (AT_SECURE, _("Boolean, was exec setuid-like?"), dec);
 	  TAG (AT_SUN_UID, _("Effective user ID"), dec);
 	  TAG (AT_SUN_RUID, _("Real user ID"), dec);
 	  TAG (AT_SUN_GID, _("Effective group ID"), dec);
